[tool.poetry]
name = "youtube-bz"
version = "0.4.0"
description = "YoutubeBrainz allow you to find and download Youtube Videos associated to an Album on MusicBrainz."
authors = ["Flowrey <flowrey@laposte.net>"]
license = "GPL-3.0"
readme = "README.md"
packages = [{include = "youtube_bz"}]

[tool.poetry.dependencies]
python = "^3.9"
pytube = "^15.0.0"
aiohttp = "^3.8.4"


[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
coverage = "^7.2.7"
isort = "^5.12.0"
pytest = "^7.4.0"
pytest-asyncio = "^0.21.1"
pytest-cov = "^4.1.0"
sphinx = "^7.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
stubPath = "typings"
venvPath = ".venv"
reportMissingTypeStubs = false
typeCheckingMode = "strict"
include = ["youtube_bz"]
exclude = [".venv", "typings"]

[tool.poetry.scripts]
youtube-bz = { callable = "youtube_bz.main:cli" }
