[build-system]
requires = ["hatchling>=0.15.0"]
build-backend = "hatchling.build"

[project]
name = "youtube-bz"
version = "0.4.1"
description = "YoutubeBrainz allow you to find and download Youtube Videos associated to an Album on MusicBrainz."
authors = [{ name = "Flowrey", email = "flowrey@laposte.net" }]
license = "GPL-3.0"
readme = "README.md"
packages = [{include = "youtube_bz"}]
dependencies = [
    "pytube>=15.0.0",
    "tqdm>=4.66.1"
]

[project.scripts]
youtube-bz = "youtube_bz.main:cli"

[tool.mypy]
ignore_missing_imports = true